<resources>
    <string name="app_name">RoomDetailsBottomSheet</string>
    <string name="button_aula">Aula</string>
    <string name="room_capacity">Capacity:</string>
    <string name="aula_capacity">300–350 people</string>
    <string name="room_location">Location:</string>
    <string name="aula_location">Ground floor(0)</string>
    <string name="room_type">Type:</string>
    <string name="aula_type">Aula</string>
    <string name="aula_description">The Aula at the Faculty of Mathematics and Computer Science is the largest room in the Faculty. It can accommodate over 300 students simultaneously and is designed for a variety of purposes, including lectures, special events, informational speeches, and examinations.</string>
    <string name="overflow_string">The Aula at the Faculty of Mathematics and Computer Science is the largest and most iconic room in the Faculty. Known for its architectural elegance and state-of-the-art facilities, it can accommodate over 300 students simultaneously. The Aula is designed to serve multiple purposes, making it a versatile space that supports both academic and ceremonial events. It hosts a range of activities, from engaging lectures and inspiring speeches to informative workshops, networking events, and comprehensive examinations. With advanced audio-visual equipment and comfortable seating arrangements, the Aula offers an optimal environment for learning, discussion, and celebration.</string>
    <string name="button_see_schedule">See the Schedule</string>
</resources>